<resources>
    <string name="app_name">BoomApp</string>

    <!-- Strings related to Sign Up Page-->
    <string name="sign_in_redirection">Already have an account ? Sign In Here</string>
    <string name="sign_up">Sign Up</string>

    <!-- Strings related to Login Page-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="login">Login</string>
    <string name="sign_up_redirection">Don\'t have an account ? Sign Up Here</string>

    <!-- Strings related to Login/SignUp Choice Page-->
    <string name="sign_up_email">Sign Up with an Email</string>
    <string name="sign_up_google">Sign Up with Google</string>
    <string name="login_email">Login with an Email</string>
    <string name="login_google">Continue with Google</string>

    <!-- Strings related to Profile -->
    <string name="logout">Logout</string>
    <string name="your_email">yourEmail</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
