<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.johny.boomapp.Activities.ChooseLog">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="553dp"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewLoginEmail" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLoginGoogle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSignUpEmail"
        app:layout_constraintVertical_bias="0.022">

        <TextView
            android:id="@+id/textViewLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_google"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:id="@+id/imageViewGoogleLogin"
            android:layout_width="42dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/basic_margin"
            app:srcCompat="@drawable/googlelogo" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewSignUpEmail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="204dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_email"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:id="@+id/imageViewEmailSignUp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/basic_margin"
            app:srcCompat="@drawable/ic_email" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLoginEmail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewLoginGoogle"
        app:layout_constraintVertical_bias="0.354">

        <ImageView
            android:id="@+id/imageViewEmailLogin"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/basic_margin"
            app:srcCompat="@drawable/door" />

        <TextView
            android:id="@+id/textViewLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
